syntax = "proto3";

package user;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "internal/infrastructure/proto/user";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create a new user",
      tags: "UserService"
    };
  }
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get user by ID",
      tags: "UserService"
    };
  }
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}